<resources>
    <string name="app_name">Inventory</string>
    <!--InventoryCatalogActivity Strings-->
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_inventory">Delete all Inventory</string>
    <string name="empty_no_inventory">No Inventory</string>
    <string name="picture_of_product">Picture of Product</string>
    <!--EditorActivity Strings-->
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="take_picture">Take a picture of your product</string>
    <string name="select_picture">Select a photo of your product</string>
    <!--EditorActivity Menu Strings-->
    <string name="save_product">Save Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="product_image">product_image</string>
    <string name="increment_quantity">Increment Quantity</string>
    <string name="decrement_quantity">Decrement Quantity</string>
</resources>
